--- a/style.css
+++ b/style.css
@@ -125,6 +125,13 @@ header{
   color: white;
 }
 
+.subtitle {
+  position: absolute;
+  font-size: 16px;
+  left: 880px;
+  top: 319px;
+}
+
 h1 {
   font-size: 48px;
   font-family: "Montserrat", sans-serif;  
