--- a/style.css
+++ b/style.css
@@ -184,11 +184,87 @@ h1 {
   text-decoration: none;
   font-weight: 500;
   font-size: 16px;
-  /* transition: color 0.3s ease; */
 }
 
 .nav-links a:hover {
   color: #ffffff;
   border-bottom: 3px;
   border-color: #ffffff;
+}
+.section {
+  padding: 60px 20px;
+  background-color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 1010px;
+  left: 405px;
+  width: 1113px;
+  height: 488px;
+}
+.section h1 {
+  font-size: 28px;
+  font-weight: 700;
+  position: absolute;
+  top: 0px;
+  left: 185px;
+  width: 739px;
+}
+.part-undertext{
+  width: 730px;
+  margin: 10px auto 40px;
+  color: #666;
+  position: absolute;
+  top: 125px;
+  left: 190px;
+}
+.service p{
+  max-width: 600px;
+  margin: 10px auto 40px;
+  color: #666;
+}
+.services {
+  display: flex;
+  justify-content: center;
+  gap: 27px;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 249px;
+  width: 100%;
+}
+.service {
+  width: 353px;
+  height: 139px;
+  text-align: center;
+}
+.service img {
+  width: 90px;
+  position: absolute;
+  top: 10px;
+}
+.service h3 {
+  width: 226px;
+  margin: 46px 127px 0px;
+  font-size: 18px;
+  text-align: left;
+}
+.service p {
+  width: 222px;
+  margin: 12px 128px;
+  font-size: 14px;
+  text-align: left;
+}
+.btn2 {
+  display: flex;
+  width: 200px;
+  height: 45px;
+  align-items: center;
+  justify-content: center;
+  background-color: #2e6fff;
+  color: white;
+  font-family: "Montserrat", sans-serif; 
+  border-radius: 30px;
+  text-decoration: none;
+  position: absolute;
+  top: 443px;
+  left: 455px;
 }
