--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1 {
 
 .header-btn {
   display: inline-block;
-  background-color: #4C6EF5;
+  background-color: #4985FF;
   color: white;
   padding: 12px 24px;
   text-decoration: none;
@@ -259,7 +259,7 @@ h1 {
   height: 45px;
   align-items: center;
   justify-content: center;
-  background-color: #2e6fff;
+  background-color: #4985FF;
   color: white;
   font-family: "Montserrat", sans-serif; 
   border-radius: 30px;
@@ -267,4 +267,175 @@ h1 {
   position: absolute;
   top: 443px;
   left: 455px;
+}
+.about-section {
+  padding: 40px;
+  font-family: 'Segoe UI', sans-serif;
+  position: absolute;
+  top: 1603px;
+  left: 0;
+  width: 1920px;
+  height: 797px;
+}
+
+.about-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+
+.about-text {
+  flex: 405 152 289;
+  width: 489px;
+  height: 295px;
+  margin-left: 405px;
+}
+
+.about-text h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #1d1d1d;
+}
+
+.about-text p {
+  margin: 15px 0;
+  color: #555;
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.about-text a {
+  color: #2d6cdf;
+  font-size: 13px;
+  text-decoration: none;
+}
+
+.about-image {
+  flex: 1 1 45%;
+  display: flex;
+  justify-content: center;
+  height: 400px;
+  width: 500px;
+}
+
+.about-image img {
+  border-radius: 12px;
+  max-width: 100%;
+  height: auto;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+}
+
+.stats {
+  display: flex;
+  gap: 100px;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  margin-left: 515px;
+}
+
+.stat-item {
+  text-align: right;
+  width: 104px;
+  height: 67px;
+}
+
+.stat-item img {
+  width: 50px;
+  margin-bottom: -55px;
+}
+
+.stat-item .number {
+  font-size: 36px;
+  font-weight: 600;
+  color: #1d1d1d;
+  font-family: "Montserrat", sans-serif;
+}
+
+.stat-item p {
+  font-size: 16px;
+  color: #666;
+}
+
+.works {
+  background: linear-gradient(to bottom, #504DC2 0%, #5F12D0 50%, #ffffff 50%, #ffffff 100%);
+  color: #000;
+  padding: 60px 0;
+  text-align: center;
+  position: absolute;
+  top: 2400px;
+  width: 1920px;
+  height: 887px;
+}
+
+.works h2 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: left;
+  color: #ffffff;
+}
+
+.works-btn {
+  background-color: #4985FF;
+  color: #fff;
+  border: none;
+  padding: 10px 25px;
+  border-radius: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 120px;
+  left: 1315px;
+  width: 200px;
+  height: 45px;
+}
+
+.works-container {
+  max-width: 1100px;
+  margin: auto;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.card {
+  background: #fff;
+  color: #000;
+  border-radius: 12px;
+  overflow: hidden;
+  flex: 1;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+  text-align: left;
+}
+
+.card img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.card h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 15px 0 10px;
+}
+
+.card h3 span {
+  color: #3C50FF;
+}
+
+.card p {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.card a {
+  font-size: 16px;
+  color: #3C50FF;
+  text-decoration: underline;
+  font-family: "Montserrat", sans-serif;
 }
